# edgeaicots

./: README.md  pyproject.toml  todo.md
docs/: allowed_links.md  log.md
src/edgeaicots/: baseline_esp32.py  main.py  seu_baseline_esp32.txt
