[project]
name = "edgeaicots"
version = "0.1.0"
description = ""
authors = [
    {name = "Brohudev",email = "hitarth.thanki9006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "esptool (>=5.2.0,<6.0.0)",
    "mpremote (>=1.28.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "edgeaicots", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
